html + scss done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Кіно пошук</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <a href="#"><h1 class="header__logo">Film search</h1></a>
+            <div class="header__subtitle--container">
+                <h2 class="header__subtitle">Favourite</h2>
+                <div class="header__subtitle--index">0</div>
+            </div>
+        </div>
+    </header>
+    <div class="modal"></div>
+    <section class="search">
+        <div class="search__container">
+            <div class="search__input--wrapper">
+                <label class="search__subtitle" for="search__input">Search movie:</label>
+                <input type="text" class="search__input" id="search__input" placeholder="Search for movies..." aria-label="Search for movies"/>
+            </div>
+        </div>
+    </section>
+    <section class="movies">
+        <div class="movies__container">
+            <div class="movie__card">
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
