--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
     </section>
     <section class="movies">
         <div class="movies__container">
-            <div class="movie__card">
-
-            </div>
         </div>
     </section>
+    <hr>
+    <footer class="footer">
+        <div class="footer__container">
+            @2023
+        </div>
+    </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
